--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.target>11</maven.compiler.target> <!-- Cambiar a 11 -->
         <java.version>11</java.version> <!-- Cambiar a 11 -->
         <spring-boot.version>2.6.7</spring-boot.version> <!-- Usa la versión más reciente disponible -->
+           <start-class>com.mycompany.ferreteria.api.Application</start-class> 
     </properties>
 
     <dependencies>
@@ -58,7 +59,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
+                <executions> 
+                    <execution> 
+                        <goals> 
+                            <goal>repackage</goal> 
+                        </goals> 
+                    </execution> 
+                </executions>
             </plugin>
         </plugins>
     </build>
+    
+    
+     
+   
+    
 </project>
