--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,20 @@
                 </executions>
             </plugin>
             
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.1.2</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.mycompany.ferreteria.api.Application</mainClass>   
+
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+            
         </plugins>
     </build>
     
