--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.maventop.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
     <artifactId>ferreteria-api</artifactId>
@@ -8,10 +8,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source> <!-- Cambiar a 11 -->
-        <maven.compiler.target>11</maven.compiler.target> <!-- Cambiar a 11 -->
-        <java.version>11</java.version> <!-- Cambiar a 11 -->
-        <spring-boot.version>2.6.7</spring-boot.version> <!-- Usa la versión más reciente disponible -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
+        <spring-boot.version>2.6.7</spring-boot.version>
         <start-class>com.mycompany.ferreteria.api.Application</start-class>
     </properties>
 
@@ -66,6 +66,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>${start-class}</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
