--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
     <dependencies>
+        <dependency> 
+            <groupId>org.springframework.boot</groupId> 
+            <artifactId>spring-boot-starter</artifactId> 
+            <version>${spring-boot.version}</version>
+        </dependency>
         <!-- Dependencia para Spring Boot Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
