--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
         <spring-boot.version>2.6.7</spring-boot.version>
-        <start-class>com.mycompany.ferreteria.api.Application</start-class>
+        <start-class>apii.Application</start-class>
     </properties>
 
     <dependencies>
-        <dependency> 
-            <groupId>org.springframework.boot</groupId> 
-            <artifactId>spring-boot-starter</artifactId> 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
         <!-- Dependencia para Spring Boot Web -->
@@ -77,4 +77,6 @@
             </plugin>
         </plugins>
     </build>
+
+    <name>API</name>
 </project>
